--- a/gtm.html
+++ b/gtm.html
@@ -2,7 +2,9 @@
 <html lang="de">
   <head>
     <meta charset="utf-8">
-    <title>Google-Tag-Loader</title>
+
+    <title>GTAG Loader</title>
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VJD3WDTLC3"></script>
     <script>
@@ -12,8 +14,8 @@
       gtag('config', 'G-VJD3WDTLC3');
     </script>
   </head>
+
   <body>
-    <!-- leeres Body-Element: unsichtbar -->
+    <!-- Leerer Body – dein Tracking läuft via Head-Script -->
   </body>
 </html>
-
