--- a/GA.html
+++ b/GA.html
@@ -13,6 +13,6 @@
     </script>
   </head>
   <body>
-    <!-- leerer Body – das Tag läuft im Hintergrund -->
+    <!-- leerer Body – Tag läuft im Hintergrund -->
   </body>
 </html>
